[metadata]
name = undate
version = attr: undate.__version__
author = 'DHTech'
author_email = 'dhtech.community@gmail.com'
description = "library for working with uncertain, fuzzy, or "
    + "partially unknown dates and date intervals"
long_description = file: README.md
license="Apache License, Version 2.0",
long_description_content_type = text/markdown
url = https://github.com/dh-tech/hackathon-2022
project_urls =
    Project Home = https://dh-tech.github.io
    Bug Tracker = https://github.com/dh-tech/hackathon-2022/-/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  python-dateutil
[options.extras_require]
all =
  %(dev)s
  %(test)s
dev =
  black>=22.10.0
  pre-commit>=2.20.0
  tox
  sphinx
  twine
  wheel
  pytest-cov
test =
  pytest>=7.2
  pytest-ordering

[options.packages.find]
where = src
