[metadata]
name = undate-rsk
version = attr: undate.__version__
author = "DHTech"
author_email = "dhtech.community@gmail.com"
description = "library for working with uncertain, fuzzy, or partially unknown dates and date intervals"
long_description = file: README.md
license="Apache License, Version 2.0",
long_description_content_type = text/markdown
url = https://github.com/dh-tech/undate-python
project_urls =
    Project Home = https://dh-tech.github.io
    Bug Tracker = https://github.com/dh-tech/undate-python/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

# When supported python versions change, update all the following places:
# - classifiers
# - minimum version required in python_requires
# - tox envlist
# - gh-actions
# - python versions in matrix config in unit_tests.yml

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  python-dateutil

[options.extras_require]
all =
  %(dev)s
  %(test)s
dev =
  black>=22.10.0
  pre-commit>=2.20.0
  tox
  twine
  wheel
  build
  %(docs)s
test =
  pytest>=7.2
  pytest-ordering
  pytest-cov
docs =
  sphinx
  sphinx_rtd_theme
  m2r2

[options.packages.find]
where = src

[tox:tox]
envlist = py38, py39, py310, py311
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests

[testenv]
deps =
    "{[options.extras_require]test}"
    -e ./[test]
commands = pytest {posargs}

[testenv:flake8]
deps =
    flake8
commands =
    flake8 --ignore=E501,E402,F401 src/undate/ tests/

[testenv:coverage]
deps =
    "{[options.extras_require]test}"
commands =
    pytest --cov=./ --cov-report=xml

[testenv:docs]
description = invoke sphinx-build to build the HTML docs
# NOTE: base python should match whatever we're using in GitHub Actions
basepython = python3.10
deps =
    -e ./[docs]
    "{[options.extras_require]docs}"
commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
